--- a/.env
+++ b/.env
@@ -34,9 +34,20 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+
+CACHE_DRIVER=redis
+QUEUE_CONNECTION=redis
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+BROADCAST_CONNECTION=redis
+
+REDIS_CLIENT=phpredis
+# REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+# REDIS_PORT=6379
+# BROADCAST_CONNECTION=log
+# FILESYSTEM_DISK=local
+# QUEUE_CONNECTION=database
 
 CACHE_STORE=database
 CACHE_PREFIX=
