--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
         "vite": "^6.0"
     },
     "dependencies": {
-        "flowbite": "^3.0.0"
+        "flowbite": "^3.0.0",
+        "ioredis": "^5.5.0",
+        "laravel-echo": "^2.0.2",
+        "pusher-js": "^8.4.0",
+        "socket.io": "^4.8.1",
+        "socket.io-client": "^4.8.1"
     }
 }
