add notifecation system

--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 APP_NAME="مدار"
 APP_ENV=local
+VITE_MODE=production
+
+# عند الانتقال إلى السيرفر، يمكنك ببساطة تغيير APP_ENV=production وضبط BROADCAST_DRIVER=pusher.
+
 APP_KEY=base64:74MhEzK+2a8HlQeblY46reQznsveRwG5dxF6iu9s1mE=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
@@ -32,18 +36,35 @@ SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
+SESSION_DOMAIN=127.0.0.1
 
-
-CACHE_DRIVER=redis
-QUEUE_CONNECTION=redis
-REDIS_HOST=127.0.0.1
-REDIS_PORT=6379
 BROADCAST_CONNECTION=redis
 
+# الإعدادات الخاصة بالبث
+BROADCAST_DRIVER=${BROADCAST_CONNECTION:-redis}
+QUEUE_CONNECTION=redis
+CACHE_DRIVER=redis
+
+# إعدادات Redis
 REDIS_CLIENT=phpredis
-# REDIS_HOST=127.0.0.1
+REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+# إعدادات Pusher (للسيرفر مستقبلاً)
+# PUSHER_APP_ID=your-app-id
+# PUSHER_APP_KEY=your-app-key
+# PUSHER_APP_SECRET=your-app-secret
+# PUSHER_APP_CLUSTER=mt1
+
+# BROADCAST_DRIVER=pusher
+# BROADCAST_DRIVER=pusher
+# PUSHER_APP_ID=your-app-id
+# PUSHER_APP_KEY=your-app-key
+# PUSHER_APP_SECRET=your-app-secret
+# PUSHER_APP_CLUSTER=your-cluster
+
+# REDIS_HOST=127.0.0.1
 # REDIS_PORT=6379
 # BROADCAST_CONNECTION=log
 # FILESYSTEM_DISK=local
