--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
-APP_NAME=Laravel
+APP_NAME="مدار"
 APP_ENV=local
-APP_KEY=base64:cd5AmKXpT2Squob9Sfi/AVsfHzBNlV6tgUGRtKGF0r4=
+VITE_MODE=production
+
+# عند الانتقال إلى السيرفر، يمكنك ببساطة تغيير APP_ENV=production وضبط BROADCAST_DRIVER=pusher.
+
+APP_KEY=base64:2cKVagpdEAwVHr5mIghhQwayYmUZQX6Dpn+xaPpQb5E=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -21,7 +25,7 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=madarsys
@@ -32,11 +36,39 @@ SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
+SESSION_DOMAIN=127.0.0.1
 
-BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+BROADCAST_CONNECTION=redis
+
+# الإعدادات الخاصة بالبث
+BROADCAST_DRIVER=${BROADCAST_CONNECTION:-redis}
+QUEUE_CONNECTION=redis
+CACHE_DRIVER=redis
+
+# إعدادات Redis
+REDIS_CLIENT=phpredis
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+# إعدادات Pusher (للسيرفر مستقبلاً)
+# PUSHER_APP_ID=your-app-id
+# PUSHER_APP_KEY=your-app-key
+# PUSHER_APP_SECRET=your-app-secret
+# PUSHER_APP_CLUSTER=mt1
+
+# BROADCAST_DRIVER=pusher
+# BROADCAST_DRIVER=pusher
+# PUSHER_APP_ID=your-app-id
+# PUSHER_APP_KEY=your-app-key
+# PUSHER_APP_SECRET=your-app-secret
+# PUSHER_APP_CLUSTER=your-cluster
+
+# REDIS_HOST=127.0.0.1
+# REDIS_PORT=6379
+# BROADCAST_CONNECTION=log
+# FILESYSTEM_DISK=local
+# QUEUE_CONNECTION=database
 
 CACHE_STORE=database
 CACHE_PREFIX=
