--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^6.0"
     },
     "dependencies": {
+        "alpinejs": "^3.14.9",
         "flowbite": "^3.0.0",
         "ioredis": "^5.5.0",
         "laravel-echo": "^2.0.2",
