--- a/.env
+++ b/.env
@@ -1,15 +1,11 @@
-APP_NAME="مدار"
+APP_NAME=Laravel
 APP_ENV=local
-VITE_MODE=production
-
-# عند الانتقال إلى السيرفر، يمكنك ببساطة تغيير APP_ENV=production وضبط BROADCAST_DRIVER=pusher.
-
-APP_KEY=base64:2cKVagpdEAwVHr5mIghhQwayYmUZQX6Dpn+xaPpQb5E=
+APP_KEY=base64:LXDjN7ZM5f5KftzGCu8kjlJVxNy5M1jgcfSTLZYIHn0=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
-APP_LOCALE=ar
+APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
@@ -25,50 +21,22 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=madarsys
-DB_USERNAME=root
-DB_PASSWORD=root
+  DB_CONNECTION=mysql
+   DB_HOST=127.0.0.1
+   DB_PORT=3307
+   DB_DATABASE=madarsys6
+   DB_USERNAME=root
+   DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=127.0.0.1
+SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=redis
-
-# الإعدادات الخاصة بالبث
-BROADCAST_DRIVER=${BROADCAST_CONNECTION:-redis}
-QUEUE_CONNECTION=redis
-CACHE_DRIVER=redis
-
-# إعدادات Redis
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-# إعدادات Pusher (للسيرفر مستقبلاً)
-# PUSHER_APP_ID=your-app-id
-# PUSHER_APP_KEY=your-app-key
-# PUSHER_APP_SECRET=your-app-secret
-# PUSHER_APP_CLUSTER=mt1
-
-# BROADCAST_DRIVER=pusher
-# BROADCAST_DRIVER=pusher
-# PUSHER_APP_ID=your-app-id
-# PUSHER_APP_KEY=your-app-key
-# PUSHER_APP_SECRET=your-app-secret
-# PUSHER_APP_CLUSTER=your-cluster
-
-# REDIS_HOST=127.0.0.1
-# REDIS_PORT=6379
-# BROADCAST_CONNECTION=log
-# FILESYSTEM_DISK=local
-# QUEUE_CONNECTION=database
+BROADCAST_CONNECTION=log
+FILESYSTEM_DISK=local
+QUEUE_CONNECTION=database
 
 CACHE_STORE=database
 CACHE_PREFIX=
