--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ LOG_LEVEL=debug
    DB_PORT=3307
    DB_DATABASE=madarsys6
    DB_USERNAME=root
-   DB_PASSWORD=
+   DB_PASSWORD=root
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
