--- a/.env
+++ b/.env
@@ -25,8 +25,8 @@ LOG_LEVEL=debug
    DB_HOST=127.0.0.1
    DB_PORT=3307
    DB_DATABASE=madarsys6
-   DB_USERNAME=root
-   DB_PASSWORD=root
+   DB_USERNAME=aaaa@gmail.com
+   DB_PASSWORD=123456789
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
